correção de alguns bugs

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="CSS/test.css">
+  <link rel="stylesheet" href="CSS/index.css">
   <title>Controle de Compras</title>
 </head>
 
@@ -15,15 +15,17 @@
     <div class="title">Ceasa</div>
   </div>
   <div class="fornecedor" data-fornecedor="Fornecedor B">
-    <h3>Galpão das Frutas</h3>
+          
+    <h3 class="id-fornecedor">Galpão das Frutas</h3>
+
     <table>
       <thead>
-        <tr>
+        <tr class="header-table">
           <th>Produto</th>
           <th>UND</th>
           <th>D 1</th>
           <th>D 2</th>
-          <th>Recebido</th>
+          <th>OK</th>
         </tr>
       </thead>
 
@@ -101,7 +103,7 @@
         </tr>
       </tbody>
     </table>
-      <h3>Distribuidor</h3>
+      <h3 class="id-fornecedor">Distribuidor</h3>
     <table>
       <thead>
         
@@ -214,7 +216,7 @@
       </tbody>
     </table>
 
-    <h3>Galpão da melancia</h3>
+    <h3 class="id-fornecedor" >Galpão da melancia</h3>
     <table>
       <tbody>
         <tr data-id="23">
@@ -288,7 +290,7 @@
     </table>
 
     <table>
-      <h3>Galpão do produtor</h3>
+      <h3 class="id-fornecedor">Galpão do produtor</h3>
       <tbody>
         <tr data-id="31">
           <td>Maxixe</td>
