--- a/index.html
+++ b/index.html
@@ -14,10 +14,8 @@
     <input type="date" name="date" class="date">
     <div class="title">Ceasa</div>
   </div>
-  <div class="fornecedor" data-fornecedor="Fornecedor B">
-          
+  <div class="fornecedor" data-fornecedor="Fornecedor B">      
     <h3 class="id-fornecedor">Galpão das Frutas</h3>
-
     <table>
       <thead>
         <tr class="header-table">
@@ -252,7 +250,7 @@
         </tr>
       </tbody>
     </table>
-     <h3>Galpão do Tomate</h3>
+     <h3 class="id-forneced">Galpão do Tomate</h3>
     <table>
       <tbody>
         <tr data-id="27">
