--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <thead>
         <tr class="header-table">
           <th>Produto</th>
-          <th>UND</th>
+          <th>QNT</th>
           <th>D 1</th>
           <th>D 2</th>
           <th>OK</th>
